# AI-AGGREGATOR-UPDATED

./: .env.example  .gitignore  README.md  alembic.ini  config.py
backend/: Dockerfile  pyproject.toml
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 001_initial_schema.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/v1/: router.py  routes_admin.py  routes_auth.py  routes_chat.py  routes_health.py  routes_invite.py  routes_payments.py  routes_usage.py  schemas.py
backend/app/core/: circuit_breaker.py  config.py  exceptions.py  logging_config.py  security.py
backend/app/db/: session.py
backend/app/db/models/: __init__.py  audit_log.py  invite_code.py  ledger.py  message.py  payment.py  rag_item.py  session.py  tool_counter.py  user.py  user_memory.py
backend/app/providers/: __init__.py  base.py  deepseek.py  factory.py  gemini.py  grok.py  groq.py  openai_compat.py  openrouter.py
backend/app/services/: admin_service.py  auth_service.py  invite_service.py  model_router.py  orchestrator.py  payment_service.py  policy_engine.py  usage_service.py
backend/tests/: conftest.py  test_admin.py  test_auth_routes.py  test_auth_service.py  test_circuit_breaker.py  test_db_session.py  test_fallback.py  test_health.py  test_invite.py  test_model_router.py  test_orchestrator.py  test_payments.py  test_phase0.py  test_phase02_models.py  test_policy_engine.py  test_providers.py
docs/: FUTURE.md
handlers/: admin.py  chat.py  documents.py  errors.py  images.py  plan.py  rag.py  repurpose.py  start.py  workspace.py
(+86 files in other folders)
